# Quickcut

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
Qml/: Main.qml
Qml/Components/: FileBrowser.qml  IconButton.qml  TimeDisplay.qml  Timeline.qml
res/: ezcut.desktop  ezcut.metainfo.xml  quickcut.desktop  quickcut.metainfo.xml
src/: dir_lister.cc  dir_lister.h  main.cc  video_processor.cc  video_processor.h
